--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,12 @@
+### Django ###
+*.log
+*.pot
+*.pyc
+__pycache__/
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
+media
+migrations/
 .idea/
 venv/
-db.sqlite3
-/migrations/
-__pycache__/
